5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1601_1801.log
== TEST (2019-04-01 17:07:06) 
-- CODE:
nome=input("nomr do objeto:")
numero=int(input("numero de repeticoes:"))
("Abra + nome_do_objeto")*n

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    ("Abra + nome_do_objeto")*n
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:10:17) 
-- CODE:
nome=input("nome do objeto:")
numero=int(input("numero de repeticoes:"))
c="Abra"
palavra= c+a+" "
feitico=c+a*n
print(feitico)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    palavra= c+a+" "
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:11:31) 
-- CODE:
nome=input("nome do objeto:")
b=int(input("numero de repeticoes:"))
c="Abra"
palavra= c+a+" "
feitico=b*palavra
print(feitico)

-- EXECUTION TIME:
0.180527
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1801/main.py", line 4, in <module>
    palavra= c+a+" "
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:12:26) 
-- CODE:
a=input("nome do objeto:")
b=int(input("numero de repeticoes:"))
c="Abra"
palavra= c + a + " "
feitico= b * palavra
print(feitico)

-- EXECUTION TIME:
0.17112
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:13:27) 
-- CODE:
a=input("digite uma palavra para feitico:")
b=int(input("digite o numero de repeticoes:"))
c="Abra"
palavra= c + a + " "
feitico= b * palavra
print(feitico)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:13:30) 
-- CODE:
a=input("digite uma palavra para feitico:")
b=int(input("digite o numero de repeticoes:"))
c="Abra"
palavra= c + a + " "
feitico= b * palavra
print(feitico)

-- EXECUTION TIME:
0.20655
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:14:21) 
-- CODE:
a =input("digite uma palavra para feitico:")
b =int(input("digite o numero de repeticoes deste feitico:"))
c = "Abra"
palavra= c + a + " "
feitico= b * palavra
print(feitico)

-- EXECUTION TIME:
0.149766
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 17:14:27) 
-- CODE:
a =input("digite uma palavra para feitico:")
b =int(input("digite o numero de repeticoes deste feitico:"))
c = "Abra "
palavra= c + a + " "
feitico= b * palavra
print(feitico)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 17:14:28) 
-- CODE:
a =input("digite uma palavra para feitico:")
b =int(input("digite o numero de repeticoes deste feitico:"))
c = "Abra "
palavra= c + a + " "
feitico= b * palavra
print(feitico)

-- EXECUTION TIME:
0.13938
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
